--- a/.travis.yml
+++ b/.travis.yml
@@ -61,6 +61,7 @@ before_install:
     - conda config --set always_yes yes --set changeps1 no
     - conda config --add channels mjirik
     - conda config --add channels conda-forge
+    - conda config --add channels bioconda
     # - conda config --add channels SimpleITK
     # - conda config --add channels luispedro
     - conda update -q conda
@@ -76,17 +77,6 @@ install:
 #    - Install dependencies
     - conda install --yes --file requirements_conda.txt pytest-cov coveralls
 #    - pip install -r requirements_pip.txt
-#    - "echo $LD_LIBRARY_PATH"
-#    - "pip install -r requirements.txt"
-#    - 'mkdir build'
-#    - "cd build"
-#    - "cmake .."
-#    - "cmake --build ."
-#    - "sudo make install"
-#    - pip install .
-#    - "cd .."
-#    - 'echo "include /usr/local/lib" | sudo tee -a /etc/ld.so.conf'
-#    - 'sudo ldconfig -v'
 #    - conda list -e
 #    - python -m io3d.datasets -l 3Dircadb1.1 jatra_5mm exp_small sliver_training_001 io3d_sample_data head volumetrie
 # command to run tests
