donwload test data

--- a/.travis.yml
+++ b/.travis.yml
@@ -76,6 +76,8 @@ install:
     - source activate travis
 #    - Install dependencies
     - conda install --yes --file requirements_conda.txt pytest-cov coveralls
+    - python -m io3d.datasets -v -gdp
+    - python -m io3d.datasets -v -l CMU-1 CMU-1-annotation SCP003
 #    - pip install -r requirements_pip.txt
 #    - conda list -e
 #    - python -m io3d.datasets -l 3Dircadb1.1 jatra_5mm exp_small sliver_training_001 io3d_sample_data head volumetrie
