ignore osx error

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ matrix:
   allow_failures:
     - env: CONDA_PYTHON_VERSION=2.7
     - env: CONDA_PYTHON_VERSION=3.7
-    # - os: windows
+    - os: osx
   fast_finish: true
 # virtualenv:
 #   system_site_packages: true
